--- a/.github/workflows/master_easytestok.yml
+++ b/.github/workflows/master_easytestok.yml
@@ -1,51 +1,43 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy container app to Azure Web App - easytestok
+name: Build and Push Docker Images
 
 on:
   push:
     branches:
-      - master
-  workflow_dispatch:
+      - master  # or the branch you want to trigger the build on
 
 jobs:
   build:
-    runs-on: 'ubuntu-latest'
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Log in to registry
-      uses: docker/login-action@v2
-      with:
-        registry: https://index.docker.io/v1/
-        username: ${{ secrets.AzureAppService_ContainerUsername_fe854f261d1b42899e8c738abbca4a79 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_dad4001d93c94e248eea45e4c4a20561 }}
-
-    - name: Build and push container image to registry
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_fe854f261d1b42899e8c738abbca4a79 }}/nginx:${{ github.sha }}
-        file: ./Dockerfile
-
-  deploy:
     runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-    - name: Deploy to Azure Web App
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'easytestok'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_80ade81ce752467cb8f1b77ae8c31584 }}
-        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_fe854f261d1b42899e8c738abbca4a79 }}/nginx:${{ github.sha }}'
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          
+          username: ${{ secrets.AzureAppService_ContainerUsername_fe854f261d1b42899e8c738abbca4a79 }}
+          password: ${{ secrets.AzureAppService_ContainerPassword_dad4001d93c94e248eea45e4c4a20561 }}
+
+
+      # Build and push nginx image
+      - name: Build and push nginx image
+        uses: docker/build-push-action@v3
+        with:
+          context: ./nginx  # Set the build context to the nginx directory
+          file: ./nginx/Dockerfile  # Specify the Dockerfile inside the nginx directory
+          push: true
+          tags: index.docker.io/yourdockerhubusername/nginx:latest  # Tag for the nginx image
+
+      # Build and push proxy image
+      - name: Build and push proxy image
+        uses: docker/build-push-action@v3
+        with:
+          context: ./proxy  # Set the build context to the proxy directory
+          file: ./proxy/Dockerfile  # Specify the Dockerfile inside the proxy directory
+          push: true
+          tags: index.docker.io/yourdockerhubusername/proxy:latest  # Tag for the proxy image
