--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     container_name: proxy
     build:
       context: ./proxy
-      dockerfile: Dockerfile
+      dockerfile: ./proxy/Dockerfile
     hostname: proxy
     volumes:
       - ./proxy/logs/:/logs/
