--- a/.github/workflows/master_epicepicmyo.yml
+++ b/.github/workflows/master_epicepicmyo.yml
@@ -45,7 +45,7 @@ jobs:
       id: deploy-to-webapp
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'epicepicmyo'
+        app-name: 'easytestok'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_8a2bfa553aad4e89b4cd7174896ec85b }}
         images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_8fc01ae6e2d5497fb4da2ab829988b61 }}/nginx:${{ github.sha }}'
